Update split keyboard and add menu icons

--- a/docs/diy-projects/arcade-stick.mdx
+++ b/docs/diy-projects/arcade-stick.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+sidebar_class_name: "arcade-stick-menu"
 title: "Arcade Stick"
 description: "A guide to build a custom arcade stick by using RP2040 microcontroller and GP2040-CE firmware."
 tags:
