--- a/docs/diy-projects/painting-minis.mdx
+++ b/docs/diy-projects/painting-minis.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 2
-title: "Miniature Painting"
+sidebar_class_name: "painting-minis-menu"
+title: "Painting Minis"
 description: "A guide to fast paint minis by using the slapchop technique."
 tags:
   - "slapchop"
