--- a/docs/scripting-notes/signing-commits.mdx
+++ b/docs/scripting-notes/signing-commits.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+sidebar_class_name: "signing-commits-menu"
 title: "Signing Commits"
 description: "A guide to setup verified signature for GitHub by using GPG key."
 ---
