--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
 slug: /
 sidebar_position: 1
+sidebar_class_name: "home-menu"
 title: "Home"
 description: "Lorenz's portfolio and documentation website. He is a character rigger, technical animator/artist, DIY enthusiast, boardgamer, sim racer."
 ---
