--- a/docs/diy-projects/split-keyboard.mdx
+++ b/docs/diy-projects/split-keyboard.mdx
@@ -14,7 +14,7 @@ tags:
 ## Overview
 
 Building a split keyboard for work so I can move the Kinesis Advantage2 to the PC. I prefer 80%-100% keyboard but Kinesis Advantage360 Professional is too pricy.
-Here is how I build a manuform split keyboard by using RP2040 microcontroller and QMK firmware.
+Here is how I build a manuform split keyboard by using RP2040 microcontroller and [QMK firmware](https://github.com/qmk/qmk_firmware).
 
 ### Final Product
 
