--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -19,16 +19,12 @@ a cat dad, DIY enthusiast, rock climber, boardgamer, sim racer outside of work.
 
 Welcome to my portfolio and documentation.
 
-::::info
-
 Picking up one programming launaguge helps me picking up other programming launaguges.
 Documentations, Stack Overflow, GitHub code, and YouTube are my best friends when I learn new stuff.
-Making my own documentation ensures I understand the concepts and allows me to look them up later.
+Making my own notes ensures I understand the concepts and allows me to look them up later.
+I started with paper notebooks and script files, but I noticed having a wiki like documentation site would be nice by having the searching, footnotes, and syntax highlight.
+Therefore, I'm converting my portfolio site into a documentation - a online notebook.
+Organizing thoughts and steps takes time, but I’m definitely updating the site slowly and trying to the stuff up-to-date.
 
-:::note
-
-Organizing thoughts and steps takes time, but I’m definitely updating the site slowly.
-
-:::
-
-::::
+Although my use case and approaches might be different than you, or might not be the best.
+Hope you find my notes useful or interesting!
