--- a/docs/diy-projects/painting-minis.mdx
+++ b/docs/diy-projects/painting-minis.mdx
@@ -2,18 +2,37 @@
 sidebar_position: 2
 sidebar_class_name: "painting-minis-menu"
 title: "Painting Minis"
-description: "A guide to fast paint minis by using the slapchop technique."
-tags:
-  - "slapchop"
-  - "dry-brush"
+description: "A showcase for my painted minis"
 ---
-
-:::danger You know what?
-
-This page is coming soon<sup>TM</sup>...
-
-:::
 
 ## Overview
 
-Painting minis for my boardgames so they're not gray.
+The painting techniques I rely on most are slapchop and dry brushing. They’re great for quickly adding shadows and highlighting details with little effort.
+
+## Steps
+
+1. Airbursh Black Primer
+    - Apply a solid black base coat to establish the deepest shadows on the mini
+2. Mid Gray Primer Zenithal
+    - Spray mid gray from a 45-degree angle to simulate general ambient lighting across the model
+3. White Primer Zenithal
+    - Spray white from directly above to replicate a strong overhead key light, enhancing highlights and increasing contrast against the black base
+    - At this stage, the lightmap is essentially "baked in," similar to how it's done for some in-game 3D assets
+4. Contrast Paint, like Army Painter Speedpaint 2.0
+    - Apply thin, translucent layers of color that allow the underlying light and shadow work to remain visible
+5. White Dry Brush, often mixing with contrast paint
+    - Lightly brush white (or tinted white) over raised details to bring out highlights, especially after applying darker tones
+6. Airbrush Satin Varnish
+    - Finish by applying two coats of varnish to seal and protect the paintjob.
+
+## Gallery
+
+![Gloomhaven Minis 1](/img/diy-projects/painting-minis/gh1.jpg)
+
+![Gloomhaven Minis 2](/img/diy-projects/painting-minis/gh2.jpg)
+
+![Gloomhaven Minis 3](/img/diy-projects/painting-minis/gh3.jpg)
+
+![Gloomhaven Minis 4](/img/diy-projects/painting-minis/gh4.jpg)
+
+![Gloomhaven Minis 5](/img/diy-projects/painting-minis/gh5.jpg)
