--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -14,17 +14,15 @@ import {VimeoIFrame} from "../src/components/rsp-frame"
 
 ## About
 
-I'm Lorenz (not Lawrence), a character rigger, technical animator/artist at work; 
-a cat dad, DIY enthusiast, rock climber, boardgamer, sim racer outside of work. 
+I'm Lorenz (not Lawrence)! By day, I’m a character rigger and technical animator/artist. Outside of work, I’m a cat dad, DIY enthusiast, rock climber, board gamer, and sim racer.
 
-Welcome to my portfolio and documentation.
+Welcome to my portfolio and documentation site.
 
-Picking up one programming launaguge helps me picking up other programming launaguges.
-Documentations, Stack Overflow, GitHub code, and YouTube are my best friends when I learn new stuff.
-Making my own notes ensures I understand the concepts and allows me to look them up later.
-I started with paper notebooks and script files, but I noticed having a wiki like documentation site would be nice by having the searching, footnotes, and syntax highlight.
-Therefore, I'm converting my portfolio site into a documentation - a online notebook.
-Organizing thoughts and steps takes time, but I’m definitely updating the site slowly and trying to the stuff up-to-date.
+Learning one programming language has made it easier for me to pick up others. 
+When I dive into something new, documentation, Stack Overflow, GitHub code, and YouTube are my go-to resources. 
+I’ve also found that taking notes helps me understand concepts better and gives me something to reference later.
+I started with handwritten notebooks and scattered script files, but over time, 
+I realized a personal wiki-style documentation site would be much more effective—especially with search, footnotes, and syntax highlighting. So, I’m turning my portfolio into a living online notebook.
+It takes time to organize everything, but I’m steadily updating the site and doing my best to keep it current.
 
-Although my use case and approaches might be different than you, or might not be the best.
-Hope you find my notes useful or interesting!
+My methods and use cases might be different from yours, or not perfect, but I hope you find something here that’s useful or at least interesting.
