--- a/docs/scripting-notes/python-general.mdx
+++ b/docs/scripting-notes/python-general.mdx
@@ -21,7 +21,8 @@ from sys import modules
 from importlib import reload
 
 def reloadImported(packageNames: list[str] | str):
-    """Reload imported modules under a specific package(s).
+    """
+    Reload imported modules under a specific package(s).
     
     :param packageNames: name of the package
     """
